add userType to response
